charts/helmapps/canary/rollout-with-analysis.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  strategy:
    canary:
      canaryService: canary-demo-preview
      steps:
      - setWeight: 20
      # An AnalysisTemplate is referenced at the second step, which starts an AnalysisRun after
      # the setWeight step. The rollout will not progress to the following step until the
      # AnalysisRun is complete. A failure/error of the analysis will cause the rollout's update to
      # abort, and set the canary weight to zero.
      - analysis:
          templates:
          - templateName: random-fail
          - templateName: always-pass
            clusterScope: true
      - setWeight: 60
      - pause:
          duration: 60
      - setWeight: 80
      - pause:
          duration: 60
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        name: canary-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 32Mi
