charts/helmapps/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: canary.dev.argoproj.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
         service:
          name: canary-demo
          port: 
            number: 80
