charts/helmapps/canary/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: canary-preview.dev.argoproj.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: canary-demo-preview
           port:
             number: 80
